src/y.output
Terminaux inutilisés dans la grammaire

   tVOID
   tRETURN


État 43 conflits: 1 décalage/réduction
État 57 conflits: 2 décalage/réduction
État 75 conflits: 2 décalage/réduction
État 76 conflits: 2 décalage/réduction
État 77 conflits: 2 décalage/réduction
État 78 conflits: 2 décalage/réduction
État 80 conflits: 7 décalage/réduction
État 81 conflits: 7 décalage/réduction
État 86 conflits: 2 décalage/réduction


Grammaire

    0 $accept: PROGRAM $end

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    2 RETURN_TYPE: TYPE
    3            | %empty

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    5 LISTE_DECLARATIONS: DECLARATION LISTE_DECLARATIONS
    6                   | %empty

    7 LISTE_INSTRUCTIONS: INSTRUCTION LISTE_INSTRUCTIONS
    8                   | %empty

    9 INSTRUCTION: AFFECTATION
   10            | COP
   11            | WHILE
   12            | CONDITION
   13            | AFFICHAGE

   14 TYPE: tINT

   15 TYPE_OPTION: tCONST

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS

   17 $@1: %empty

   18 CONDITION: CONDITION_IF BODY $@1 tELSE BODY
   19          | CONDITION_IF BODY

   20 $@2: %empty

   21 $@3: %empty

   22 WHILE: tWHILE tOPENED_PARENTHESIS $@2 EXPRESSION tCLOSED_PARENTHESIS $@3 BODY

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN
   24            | TYPE LIST_IDENTIFIER tSEMI_COLUMN
   25            | TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

   26 LIST_IDENTIFIER: tIDENTIFIER

   27 $@4: %empty

   28 LIST_IDENTIFIER: tIDENTIFIER $@4 tCOMMA LIST_IDENTIFIER

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER tSEMI_COLUMN

   30 COP: tIDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS
   33           | EXPRESSION tSTAR EXPRESSION
   34           | EXPRESSION tSLASH EXPRESSION
   35           | EXPRESSION tPLUS EXPRESSION
   36           | EXPRESSION tMINUS EXPRESSION
   37           | EXPRESSION tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION tSUP EXPRESSION
   39           | EXPRESSION tINF EXPRESSION
   40           | tIDENTIFIER
   41           | tMINUS EXPRESSION
   42           | tNUMBER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tNUMBER (258) 29 42
tIDENTIFIER (259) 26 28 29 30 31 40
tCOMMA (260) 28
tSEMI_COLUMN (261) 23 24 25 29 30 31
tSLASH (262) 34
tSTAR (263) 33
tPLUS (264) 35
tMINUS (265) 36 41
tEQUAL (266) 23 25 29 30 37
tCLOSED_PARENTHESIS (267) 1 16 22 31 32
tOPENED_PARENTHESIS (268) 1 16 22 31 32
tVOID (269)
tCONST (270) 15
tINT (271) 14
tMAIN (272) 1
tOPENED_C_BRACKET (273) 4
tCLOSED_C_BRACKET (274) 4
tRETURN (275)
tPRINTF (276) 31
tSUP (277) 38
tINF (278) 39
tIF (279) 16
tELSE (280) 18
tWHILE (281) 22


Non-terminaux, suivis des règles où ils apparaissent

$accept (27)
    à gauche: 0
PROGRAM (28)
    à gauche: 1, à droite: 0
RETURN_TYPE (29)
    à gauche: 2 3, à droite: 1
BODY (30)
    à gauche: 4, à droite: 1 18 19 22
LISTE_DECLARATIONS (31)
    à gauche: 5 6, à droite: 4 5
LISTE_INSTRUCTIONS (32)
    à gauche: 7 8, à droite: 4 7
INSTRUCTION (33)
    à gauche: 9 10 11 12 13, à droite: 7
TYPE (34)
    à gauche: 14, à droite: 2 23 24 25
TYPE_OPTION (35)
    à gauche: 15, à droite: 23
CONDITION_IF (36)
    à gauche: 16, à droite: 18 19
CONDITION (37)
    à gauche: 18 19, à droite: 12
$@1 (38)
    à gauche: 17, à droite: 18
WHILE (39)
    à gauche: 22, à droite: 11
$@2 (40)
    à gauche: 20, à droite: 22
$@3 (41)
    à gauche: 21, à droite: 22
DECLARATION (42)
    à gauche: 23 24 25, à droite: 5
LIST_IDENTIFIER (43)
    à gauche: 26 28, à droite: 23 24 25 28
$@4 (44)
    à gauche: 27, à droite: 28
AFFECTATION (45)
    à gauche: 29, à droite: 9
COP (46)
    à gauche: 30, à droite: 10
AFFICHAGE (47)
    à gauche: 31, à droite: 13
EXPRESSION (48)
    à gauche: 32 33 34 35 36 37 38 39 40 41 42, à droite: 16 22 23
    25 30 32 33 34 35 36 37 38 39 41


État 0

    0 $accept: . PROGRAM $end

    tINT  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 3 (RETURN_TYPE)

    PROGRAM      aller à l'état 2
    RETURN_TYPE  aller à l'état 3
    TYPE         aller à l'état 4


État 1

   14 TYPE: tINT .

    $défaut  réduction par utilisation de la règle 14 (TYPE)


État 2

    0 $accept: PROGRAM . $end

    $end  décalage et aller à l'état 5


État 3

    1 PROGRAM: RETURN_TYPE . tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    tMAIN  décalage et aller à l'état 6


État 4

    2 RETURN_TYPE: TYPE .

    $défaut  réduction par utilisation de la règle 2 (RETURN_TYPE)


État 5

    0 $accept: PROGRAM $end .

    $défaut  accepter


État 6

    1 PROGRAM: RETURN_TYPE tMAIN . tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    tOPENED_PARENTHESIS  décalage et aller à l'état 7


État 7

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS . tCLOSED_PARENTHESIS BODY

    tCLOSED_PARENTHESIS  décalage et aller à l'état 8


État 8

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS . BODY

    tOPENED_C_BRACKET  décalage et aller à l'état 9

    BODY  aller à l'état 10


État 9

    4 BODY: tOPENED_C_BRACKET . LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    tCONST  décalage et aller à l'état 11
    tINT    décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 6 (LISTE_DECLARATIONS)

    LISTE_DECLARATIONS  aller à l'état 12
    TYPE                aller à l'état 13
    TYPE_OPTION         aller à l'état 14
    DECLARATION         aller à l'état 15


État 10

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY .

    $défaut  réduction par utilisation de la règle 1 (PROGRAM)


État 11

   15 TYPE_OPTION: tCONST .

    $défaut  réduction par utilisation de la règle 15 (TYPE_OPTION)


État 12

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS . LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    tIDENTIFIER  décalage et aller à l'état 16
    tPRINTF      décalage et aller à l'état 17
    tIF          décalage et aller à l'état 18
    tWHILE       décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 8 (LISTE_INSTRUCTIONS)

    LISTE_INSTRUCTIONS  aller à l'état 20
    INSTRUCTION         aller à l'état 21
    CONDITION_IF        aller à l'état 22
    CONDITION           aller à l'état 23
    WHILE               aller à l'état 24
    AFFECTATION         aller à l'état 25
    COP                 aller à l'état 26
    AFFICHAGE           aller à l'état 27


État 13

   24 DECLARATION: TYPE . LIST_IDENTIFIER tSEMI_COLUMN
   25            | TYPE . LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tIDENTIFIER  décalage et aller à l'état 28

    LIST_IDENTIFIER  aller à l'état 29


État 14

   23 DECLARATION: TYPE_OPTION . TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tINT  décalage et aller à l'état 1

    TYPE  aller à l'état 30


État 15

    5 LISTE_DECLARATIONS: DECLARATION . LISTE_DECLARATIONS

    tCONST  décalage et aller à l'état 11
    tINT    décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 6 (LISTE_DECLARATIONS)

    LISTE_DECLARATIONS  aller à l'état 31
    TYPE                aller à l'état 13
    TYPE_OPTION         aller à l'état 14
    DECLARATION         aller à l'état 15


État 16

   29 AFFECTATION: tIDENTIFIER . tEQUAL tNUMBER tSEMI_COLUMN
   30 COP: tIDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tEQUAL  décalage et aller à l'état 32


État 17

   31 AFFICHAGE: tPRINTF . tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

    tOPENED_PARENTHESIS  décalage et aller à l'état 33


État 18

   16 CONDITION_IF: tIF . tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS

    tOPENED_PARENTHESIS  décalage et aller à l'état 34


État 19

   22 WHILE: tWHILE . tOPENED_PARENTHESIS $@2 EXPRESSION tCLOSED_PARENTHESIS $@3 BODY

    tOPENED_PARENTHESIS  décalage et aller à l'état 35


État 20

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS . tCLOSED_C_BRACKET

    tCLOSED_C_BRACKET  décalage et aller à l'état 36


État 21

    7 LISTE_INSTRUCTIONS: INSTRUCTION . LISTE_INSTRUCTIONS

    tIDENTIFIER  décalage et aller à l'état 16
    tPRINTF      décalage et aller à l'état 17
    tIF          décalage et aller à l'état 18
    tWHILE       décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 8 (LISTE_INSTRUCTIONS)

    LISTE_INSTRUCTIONS  aller à l'état 37
    INSTRUCTION         aller à l'état 21
    CONDITION_IF        aller à l'état 22
    CONDITION           aller à l'état 23
    WHILE               aller à l'état 24
    AFFECTATION         aller à l'état 25
    COP                 aller à l'état 26
    AFFICHAGE           aller à l'état 27


État 22

   18 CONDITION: CONDITION_IF . BODY $@1 tELSE BODY
   19          | CONDITION_IF . BODY

    tOPENED_C_BRACKET  décalage et aller à l'état 9

    BODY  aller à l'état 38


État 23

   12 INSTRUCTION: CONDITION .

    $défaut  réduction par utilisation de la règle 12 (INSTRUCTION)


État 24

   11 INSTRUCTION: WHILE .

    $défaut  réduction par utilisation de la règle 11 (INSTRUCTION)


État 25

    9 INSTRUCTION: AFFECTATION .

    $défaut  réduction par utilisation de la règle 9 (INSTRUCTION)


État 26

   10 INSTRUCTION: COP .

    $défaut  réduction par utilisation de la règle 10 (INSTRUCTION)


État 27

   13 INSTRUCTION: AFFICHAGE .

    $défaut  réduction par utilisation de la règle 13 (INSTRUCTION)


État 28

   26 LIST_IDENTIFIER: tIDENTIFIER .
   28                | tIDENTIFIER . $@4 tCOMMA LIST_IDENTIFIER

    tCOMMA    réduction par utilisation de la règle 27 ($@4)
    $défaut  réduction par utilisation de la règle 26 (LIST_IDENTIFIER)

    $@4  aller à l'état 39


État 29

   24 DECLARATION: TYPE LIST_IDENTIFIER . tSEMI_COLUMN
   25            | TYPE LIST_IDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tSEMI_COLUMN  décalage et aller à l'état 40
    tEQUAL        décalage et aller à l'état 41


État 30

   23 DECLARATION: TYPE_OPTION TYPE . LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tIDENTIFIER  décalage et aller à l'état 28

    LIST_IDENTIFIER  aller à l'état 42


État 31

    5 LISTE_DECLARATIONS: DECLARATION LISTE_DECLARATIONS .

    $défaut  réduction par utilisation de la règle 5 (LISTE_DECLARATIONS)


État 32

   29 AFFECTATION: tIDENTIFIER tEQUAL . tNUMBER tSEMI_COLUMN
   30 COP: tIDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              décalage et aller à l'état 43
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 47


État 33

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS . tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

    tIDENTIFIER  décalage et aller à l'état 48


État 34

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS . EXPRESSION tCLOSED_PARENTHESIS

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 50


État 35

   22 WHILE: tWHILE tOPENED_PARENTHESIS . $@2 EXPRESSION tCLOSED_PARENTHESIS $@3 BODY

    $défaut  réduction par utilisation de la règle 20 ($@2)

    $@2  aller à l'état 51


État 36

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET .

    $défaut  réduction par utilisation de la règle 4 (BODY)


État 37

    7 LISTE_INSTRUCTIONS: INSTRUCTION LISTE_INSTRUCTIONS .

    $défaut  réduction par utilisation de la règle 7 (LISTE_INSTRUCTIONS)


État 38

   18 CONDITION: CONDITION_IF BODY . $@1 tELSE BODY
   19          | CONDITION_IF BODY .

    tELSE     réduction par utilisation de la règle 17 ($@1)
    $défaut  réduction par utilisation de la règle 19 (CONDITION)

    $@1  aller à l'état 52


État 39

   28 LIST_IDENTIFIER: tIDENTIFIER $@4 . tCOMMA LIST_IDENTIFIER

    tCOMMA  décalage et aller à l'état 53


État 40

   24 DECLARATION: TYPE LIST_IDENTIFIER tSEMI_COLUMN .

    $défaut  réduction par utilisation de la règle 24 (DECLARATION)


État 41

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 54


État 42

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tEQUAL  décalage et aller à l'état 55


État 43

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER . tSEMI_COLUMN
   42 EXPRESSION: tNUMBER .

    tSEMI_COLUMN  décalage et aller à l'état 56

    tSEMI_COLUMN  [réduction par utilisation de la règle 42 (EXPRESSION)]
    $défaut      réduction par utilisation de la règle 42 (EXPRESSION)


État 44

   40 EXPRESSION: tIDENTIFIER .

    $défaut  réduction par utilisation de la règle 40 (EXPRESSION)


État 45

   41 EXPRESSION: tMINUS . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 57


État 46

   32 EXPRESSION: tOPENED_PARENTHESIS . EXPRESSION tCLOSED_PARENTHESIS

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 58


État 47

   30 COP: tIDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  décalage et aller à l'état 59
    tSLASH        décalage et aller à l'état 60
    tSTAR         décalage et aller à l'état 61
    tPLUS         décalage et aller à l'état 62
    tMINUS        décalage et aller à l'état 63
    tEQUAL        décalage et aller à l'état 64
    tSUP          décalage et aller à l'état 65
    tINF          décalage et aller à l'état 66


État 48

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER . tCLOSED_PARENTHESIS tSEMI_COLUMN

    tCLOSED_PARENTHESIS  décalage et aller à l'état 67


État 49

   42 EXPRESSION: tNUMBER .

    $défaut  réduction par utilisation de la règle 42 (EXPRESSION)


État 50

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION . tCLOSED_PARENTHESIS
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               décalage et aller à l'état 60
    tSTAR                décalage et aller à l'état 61
    tPLUS                décalage et aller à l'état 62
    tMINUS               décalage et aller à l'état 63
    tEQUAL               décalage et aller à l'état 64
    tCLOSED_PARENTHESIS  décalage et aller à l'état 68
    tSUP                 décalage et aller à l'état 65
    tINF                 décalage et aller à l'état 66


État 51

   22 WHILE: tWHILE tOPENED_PARENTHESIS $@2 . EXPRESSION tCLOSED_PARENTHESIS $@3 BODY

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 69


État 52

   18 CONDITION: CONDITION_IF BODY $@1 . tELSE BODY

    tELSE  décalage et aller à l'état 70


État 53

   28 LIST_IDENTIFIER: tIDENTIFIER $@4 tCOMMA . LIST_IDENTIFIER

    tIDENTIFIER  décalage et aller à l'état 28

    LIST_IDENTIFIER  aller à l'état 71


État 54

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  décalage et aller à l'état 72
    tSLASH        décalage et aller à l'état 60
    tSTAR         décalage et aller à l'état 61
    tPLUS         décalage et aller à l'état 62
    tMINUS        décalage et aller à l'état 63
    tEQUAL        décalage et aller à l'état 64
    tSUP          décalage et aller à l'état 65
    tINF          décalage et aller à l'état 66


État 55

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 73


État 56

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER tSEMI_COLUMN .

    $défaut  réduction par utilisation de la règle 29 (AFFECTATION)


État 57

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION
   41           | tMINUS EXPRESSION .

    tSUP  décalage et aller à l'état 65
    tINF  décalage et aller à l'état 66

    tSUP      [réduction par utilisation de la règle 41 (EXPRESSION)]
    tINF      [réduction par utilisation de la règle 41 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 41 (EXPRESSION)


État 58

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION . tCLOSED_PARENTHESIS
   33           | EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               décalage et aller à l'état 60
    tSTAR                décalage et aller à l'état 61
    tPLUS                décalage et aller à l'état 62
    tMINUS               décalage et aller à l'état 63
    tEQUAL               décalage et aller à l'état 64
    tCLOSED_PARENTHESIS  décalage et aller à l'état 74
    tSUP                 décalage et aller à l'état 65
    tINF                 décalage et aller à l'état 66


État 59

   30 COP: tIDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN .

    $défaut  réduction par utilisation de la règle 30 (COP)


État 60

   34 EXPRESSION: EXPRESSION tSLASH . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 75


État 61

   33 EXPRESSION: EXPRESSION tSTAR . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 76


État 62

   35 EXPRESSION: EXPRESSION tPLUS . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 77


État 63

   36 EXPRESSION: EXPRESSION tMINUS . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 78


État 64

   37 EXPRESSION: EXPRESSION tEQUAL . tEQUAL EXPRESSION

    tEQUAL  décalage et aller à l'état 79


État 65

   38 EXPRESSION: EXPRESSION tSUP . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 80


État 66

   39 EXPRESSION: EXPRESSION tINF . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 81


État 67

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS . tSEMI_COLUMN

    tSEMI_COLUMN  décalage et aller à l'état 82


État 68

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS .

    $défaut  réduction par utilisation de la règle 16 (CONDITION_IF)


État 69

   22 WHILE: tWHILE tOPENED_PARENTHESIS $@2 EXPRESSION . tCLOSED_PARENTHESIS $@3 BODY
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               décalage et aller à l'état 60
    tSTAR                décalage et aller à l'état 61
    tPLUS                décalage et aller à l'état 62
    tMINUS               décalage et aller à l'état 63
    tEQUAL               décalage et aller à l'état 64
    tCLOSED_PARENTHESIS  décalage et aller à l'état 83
    tSUP                 décalage et aller à l'état 65
    tINF                 décalage et aller à l'état 66


État 70

   18 CONDITION: CONDITION_IF BODY $@1 tELSE . BODY

    tOPENED_C_BRACKET  décalage et aller à l'état 9

    BODY  aller à l'état 84


État 71

   28 LIST_IDENTIFIER: tIDENTIFIER $@4 tCOMMA LIST_IDENTIFIER .

    $défaut  réduction par utilisation de la règle 28 (LIST_IDENTIFIER)


État 72

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN .

    $défaut  réduction par utilisation de la règle 25 (DECLARATION)


État 73

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  décalage et aller à l'état 85
    tSLASH        décalage et aller à l'état 60
    tSTAR         décalage et aller à l'état 61
    tPLUS         décalage et aller à l'état 62
    tMINUS        décalage et aller à l'état 63
    tEQUAL        décalage et aller à l'état 64
    tSUP          décalage et aller à l'état 65
    tINF          décalage et aller à l'état 66


État 74

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS .

    $défaut  réduction par utilisation de la règle 32 (EXPRESSION)


État 75

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   34           | EXPRESSION tSLASH EXPRESSION .
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSUP  décalage et aller à l'état 65
    tINF  décalage et aller à l'état 66

    tSUP      [réduction par utilisation de la règle 34 (EXPRESSION)]
    tINF      [réduction par utilisation de la règle 34 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 34 (EXPRESSION)


État 76

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   33           | EXPRESSION tSTAR EXPRESSION .
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSUP  décalage et aller à l'état 65
    tINF  décalage et aller à l'état 66

    tSUP      [réduction par utilisation de la règle 33 (EXPRESSION)]
    tINF      [réduction par utilisation de la règle 33 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 33 (EXPRESSION)


État 77

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   35           | EXPRESSION tPLUS EXPRESSION .
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH  décalage et aller à l'état 60
    tSTAR   décalage et aller à l'état 61
    tSUP    décalage et aller à l'état 65
    tINF    décalage et aller à l'état 66

    tSUP      [réduction par utilisation de la règle 35 (EXPRESSION)]
    tINF      [réduction par utilisation de la règle 35 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 35 (EXPRESSION)


État 78

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   36           | EXPRESSION tMINUS EXPRESSION .
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH  décalage et aller à l'état 60
    tSTAR   décalage et aller à l'état 61
    tSUP    décalage et aller à l'état 65
    tINF    décalage et aller à l'état 66

    tSUP      [réduction par utilisation de la règle 36 (EXPRESSION)]
    tINF      [réduction par utilisation de la règle 36 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 36 (EXPRESSION)


État 79

   37 EXPRESSION: EXPRESSION tEQUAL tEQUAL . EXPRESSION

    tNUMBER              décalage et aller à l'état 49
    tIDENTIFIER          décalage et aller à l'état 44
    tMINUS               décalage et aller à l'état 45
    tOPENED_PARENTHESIS  décalage et aller à l'état 46

    EXPRESSION  aller à l'état 86


État 80

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   38           | EXPRESSION tSUP EXPRESSION .
   39           | EXPRESSION . tINF EXPRESSION
